--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "whale-code-test",
   "version": "0.1.0",
   "private": true,
+  "description": "Whale.io code test",
+  "author": "brenttimmermans <brenttimmermans7@gmail.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
