--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.5",
     "@mui/material-nextjs": "^5.15.5",
+    "@reduxjs/toolkit": "^2.0.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
